Avoid showing extra margins in single-node tray examples.

--- a/packages/editor/components/tray/tray.css
+++ b/packages/editor/components/tray/tray.css
@@ -1,5 +1,6 @@
 
 .tray {
+  --editor-bg-color: var(--chakra-colors-gray-900);
   width: 100%;
   height: calc(99vh - 41px);
   overflow-y: scroll;
